# libfatbat

./: .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt  LICENSE  LICENSE_HEADER  README.md  controller_base.hpp  fabric_error.hpp  libfabric_defines_template.hpp  memory_region.hpp  operation_context_base.hpp  project_libfabric.cmake  simple_counter.hpp
cmake/: FindPMI2.cmake  FindPMIx.cmake  libfatbat_defines_template.hpp  libfatbat_macros.cmake
include/libfatbat/: controller_base.hpp  fabric_error.hpp  locality.hpp  logging.hpp  memory_region.hpp  operation_context_base.hpp  print.hpp  print_type.hpp  simple_counter.hpp
scripts/: clang-reformat.sh  pre-commit
test/: CMakeLists.txt  communicator.hpp  controller.hpp  operation_context.hpp  pmi_helper.hpp  polling_helper.hpp  test_controller.hpp  test_utils.hpp
test/pmi/: CMakeLists.txt  kv-test-pmix.cxx  pmi-boot-libfabric.cxx  rdma-read-benchmark.cxx  rdma-read-test.cxx  send-recv-benchmark.cxx  send-recv-test.cxx
